              more flexibility.
            AnchorAlarmBox: added wind angle.
            NextPointBearingBox: removed smoothing.
            NextPointTimeToGoBox: the heading will now scroll if it is long and
              the value is subject to smoothing.
            Sunlight/Moon Boxes now handle null values per-path.
  * 0.7.0 Application time is now taken from the SignalK server. This ensures
            timestamps are handled correctly even on devices not correctly
            time synchronised.
          Added Notifications Log display.
          If we fails to read the config we back it up before reverting to
            the default.
          Added --enable-set-time command line option to allow setting
            the OS time from 'navigation.datetime'.
          Added --config-file command line option to allow multiple instances
            to be run with different configs.
          Added --no-full-screen command line option to disable Full Screen
            functionality on flutter-pi builds.
          In "Read Only" mode the Error Log can now be displayed.
          The Box selection menu is now more compact.
          To allow for more complex SignalK setups, the SignalK Server
            is now specified as a URL rather than host and port. The config is
            automatically updated to the new format and a backup kept in
            boatinstrument.json.v0.
          HTTP headers can now be added in the setting to allow auth/proxy
              headers to be added.
              Thanks to James P for the idea and testing.
          Added "Full Screen" button.
            Thanks to Eric S for the idea.
          The Save/Discard buttons on the Page Edit screen are now more
            prominent and you have to confirm when discarding changes.
            Thanks to Eric S for the feedback.
          SignalK data can now be designated "Real Time", "Infrequent" or "Static"